force-app/main/default/objects/Opportunity/fields/Mentee_Goal__c.field-meta.xml
<CustomField>
    <fullName>Mentee_Goal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Parent Opportunity to this milestone</inlineHelpText>
    <label>Mentee Goal</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.npsp__Primary_Contact__c</field>
            <operation>equals</operation>
            <valueField>$Source.npsp__Primary_Contact__c</valueField>
        </filterItems>
        <infoMessage>Select Mentee&apos;s Goal</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunities (Mentee Goal)</relationshipLabel>
    <relationshipName>Milstones</relationshipName>
    <type>Lookup</type>
</CustomField>