force-app/main/default/objects/Opportunity/fields/Mentee_Goal_Stage__c.field-meta.xml
<CustomField>
    <fullName>Mentee_Goal_Stage__c</fullName>
    <formula>TEXT(Mentee_Goal__r.StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mentee Goal Stage</label>
    <type>Text</type>
</CustomField>