force-app/main/default/objects/Opportunity/fields/Mentor__c.field-meta.xml
<CustomField>
    <fullName>Mentor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Main Mentor</inlineHelpText>
    <label>Mentor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Mentor)</relationshipLabel>
    <relationshipName>Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>