force-app/main/default/objects/Opportunity/recordTypes/Goal.recordType-meta.xml
<RecordType>
    <fullName>Goal</fullName>
    <active>true</active>
    <businessProcess>Mentee Goal</businessProcess>
    <description>Accumulative overall progress of mentee&apos;s achievements</description>
    <label>Goal</label>
</RecordType>