force-app/main/default/objects/Opportunity/recordTypes/Milestone.recordType-meta.xml
<RecordType>
    <fullName>Milestone</fullName>
    <active>true</active>
    <businessProcess>Milestone</businessProcess>
    <description>Represent one-time achievement</description>
    <label>Milestone</label>
</RecordType>